--- a/src/1-Intro/1-4_autonomous-kinematics-measurements/1-4_autonomous-kinematics-measurements.tex
+++ b/src/1-Intro/1-4_autonomous-kinematics-measurements/1-4_autonomous-kinematics-measurements.tex
@@ -16,3 +16,8 @@ The proposed method overcomes the various limitations of previous attempts to au
 \label{sec:optimization-routine}
 \input{src/1-Intro/1-4_autonomous-kinematics-measurements/optimization-routine.tex}
 
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../../../Andrew_Jensen_Dissertation"
+%%% End:
